--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -13,13 +13,15 @@
         {% if user.is_authenticated %}
             <p>Bem-vindo, {{ user.username }}!</p>
             <a href="{% url 'logout' %}">Logout</a>
+            <a href="{% url 'change_password' %}">Alterar a Senha!</a>
+
         {% else %}
             <p>Você não está autenticado.</p>
             <a href="{% url 'login' %}">Login</a> | <a href="{% url 'register' %}">Registrar</a>
         {% endif %}
     </div>
 
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
